--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t phytopius/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run phytopius/docker-react nüm run test -- --coverage
+  - docker run phytopius/docker-react npm run test -- --coverage
